# BIT-Compiler

lab4/: CMakeLists.txt  generate.cpp  generate.h  lexer.l  main.cpp  postfix.cpp  postfix.h  token.cpp  token.h
